--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     command: >
       sh -c "python manage.py makemigrations &&
              python manage.py migrate &&
-             python manage.py loaddata content &&
+             python manage.py loaddata content/fixtures/*.json &&
              python manage.py runserver 0.0.0.0:8000"
 
   db:
