--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ show_error_context = True
 ignore_missing_imports = True
 strict_optional = True
 
-[mypy-server.*.migrations.*]
+[mypy-*.migrations.*]
 ignore_errors = True
 
 [pylint]
