[chore] Fix python linter setup

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Python Linter
       uses: sunnysid3up/python-linter@master
       with:
-        source: "poe"
+        source: "poe/**"
         mypy-options: "--ignore-missing-imports"
         pylint-options: "--rcfile=setup.cfg"
         isort-options: "-w 100"
